2006-08-06  John Finlay  <finlay@moeraki.com>

	* docs/fixxref.py (link_pat): Allow patterns that cross multiple lines.

2006-08-06  Johan Dahlin  <johan@gnome.org>

	* configure.in: Post release version bump

=== PyGTK 2.9.5 ===
2006-08-06  Johan Dahlin  <johan@gnome.org>

	* NEWS: 2.9.5

2006-08-05  Johan Dahlin  <jdahlin@async.com.br>

	* gtk/Makefile.am (GDK_TYPES_DEFS): Always include 2.10 defs in
	EXTRA_DIST, fixes (#350008, Joseph Sacco)

	* gtk/__init__.py (ver): Make it possible to reload the gtk+ module,
	(#349026, Alexander Larsson)

	* tests/test_api.py (APITest.testGlade): Add a test

	* gtk/_lazyutils.py (LazyModule.__getattr__): Special case __members__
	to dir on the real module, fixes (#349892, John Finlay)

	* tests/test_api.py (APITest.testKeysyms):
	Add a test

2006-08-05  John Finlay  <finlay@moeraki.com>

	* gtk/gtkunixprint.override (pygtk_custom_destroy_notify): Add this
	back in.

2006-08-04  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in: post release version bump

=== PyGTK 2.9.4 ===
2006-08-04  Johan Dahlin  <jdahlin@async.com.br>

	* configure.in:
	* docs/Makefile.am:
	* docs/reference/entities.docbook.in:
	* docs/reference/pygtk2-ref.xml:
	Clean up the build date/version mess I created.
	Now it's created during configure time and properly included in
	the docbook files. Also make sure distcheck passes

2006-08-04  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* configure.in: Add hack to disable libtool checking for g++ and
	g77 (copied from libglade).

2006-07-31  John Finlay  <finlay@moeraki.com>

	* codegen/defsgen.py: Add new program to generate .defs files using
	the ctypes module to extract info from the GTK libraries.

2006-07-30  John Finlay  <finlay@moeraki.com>

	* gtk/gtkunixprint.override: Remove pygtk_custom_destroy_notify.

2006-07-30  Gustavo J. A. M. Carneiro  <gjc@gnome.org>

	* codegen/codegen.py (SourceWriter.write_class): Simplify code
	that generates the call to pygobject_register_class; Correct the