@@ -131,6 +131,9 @@ AC_SUBST(PYGOBJECT_INCLUDEDIR)
 PYGOBJECT_DATADIR=`$PKG_CONFIG --variable=datadir pygobject-2.0`
 AC_SUBST(PYGOBJECT_DATADIR)
 
+PYGOBJECT_FIXXREF="$PYTHON `$PKG_CONFIG --variable=fixxref pygobject-2.0`"
+AC_SUBST(PYGOBJECT_FIXXREF)
+
 dnl atk
 PKG_CHECK_MODULES(ATK, atk >= atk_required_version,
 	have_atk=true, have_atk=false)
