@@ -1,3 +1,7 @@
+2006-08-06  Johan Dahlin  <johan@gnome.org>
+
+	* docs/fixxref.py: Remove, it moved to PyGObject.
+
 2006-08-06  John Finlay  <finlay@moeraki.com>
 
 	* docs/fixxref.py (link_pat): Allow patterns that cross multiple lines.
